* styles/SSGlobalStyles.css: fix for summary overflow issue. Still need to truncate.

--- a/styles/SSGlobalStyles.css
+++ b/styles/SSGlobalStyles.css
@@ -235,10 +235,17 @@ ul.ShiftListView li.ShiftListViewCell:hover .spaceName
       /*display: inline;*/
 }
 
-.ShiftListView .ShiftListViewCell div.summaryContainer
+.ShiftListView .ShiftListViewCell div.summaryContainer,
+.ShiftListView .ShiftListViewCell span.summaryContainer
 {
-   color: #4B423A;
-   margin: 0;
+  position: absolute;
+  bottom: 0px;
+  left: 55px;
+  right: 50px;
+  top: 0px;
+  overflow: hidden;
+  color: #4B423A;
+  margin: 0px;
 }
 
 .ShiftListView .ShiftListViewCell div.summary
